rs/macros/tests/ui/gservice_fails_export_unwrap_result_must_returns_result.rs
use sails_macros::service;

struct MyService;

#[service]
impl MyService {
    #[export(route = "this", unwrap_result)]
    pub fn this(&self, p1: bool) -> bool {
        !p1
    }
}

#[tokio::main]
async fn main() {}
